--- a/components/homepage/Homepage.css
+++ b/components/homepage/Homepage.css
@@ -1,6 +1,5 @@
 .homepage {
 	display: grid;
-	grid-template-columns: 1fr 4fr;
-	grid-column-gap: 1em;
-	grid-row-gap: 1em;
+	grid-template-columns: 20% 78%;
+	grid-gap: 1em;
 }
