--- a/components/sidebar/Sidebar.css
+++ b/components/sidebar/Sidebar.css
@@ -5,9 +5,15 @@
 	background-color: #3279a8;
 	color: white;
 	border: solid black 0.1em;
+	word-wrap: break-word;
+	box-shadow: 0.4em 0.4em lightgrey;
 }
 
 .category {
 	font-size: 2em;
 	color: white;
+}
+
+.category:hover {
+	color: #b8e6ff;
 }
