--- a/components/blogpost/Blogpost.css
+++ b/components/blogpost/Blogpost.css
@@ -11,11 +11,19 @@
 	color: green;
 }
 
+.blogpostInfoBar {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
 .date {
 	color: grey;
+	margin: 0em;
 }
 
 .body {
 	font-size: 1.8em; 
 	line-height: 1.5em;
 }
+
