--- a/components/header/Header.css
+++ b/components/header/Header.css
@@ -1,8 +1,5 @@
 .header {
-	font-family: monospace;
 	grid-column: 1/-1; /* The header spans columns [1, end) in its containing grid */
-	background-color: #3279a8; 
-	color: white;
-	border: solid black 0.1em;
-	box-shadow: 0.4em 0.4em lightgrey;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
