--- a/components/about/About.css
+++ b/components/about/About.css
@@ -1,3 +1,11 @@
 .about {
 	font-family: monospace;
+	font-size: 1.5em; 
+	text-align: center;
+}
+
+.aboutCow {
+	max-width: 100%;
+	height: auto; 
+	width: auto
 }
