--- a/components/blogpost/Blogpost.css
+++ b/components/blogpost/Blogpost.css
@@ -3,3 +3,14 @@
 	grid-column: 2; 
 	margin-right: 1.5em;
 }
+
+/* 
+   See https://material-ui.com/customization/breakpoints/
+   for correspondence between material-ui breakpoint sizes
+   and px
+*/
+@media only screen and (max-width: 960px) {
+	.blogpost {
+		margin-right: 0.2em
+	}
+}
